--- a/package.json
+++ b/package.json
@@ -66,5 +66,12 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2"
+  },
+  "resolutions": {
+    "@angular/common": "18.1.3",
+    "@angular/core": "18.1.3",
+    "@angular/forms": "18.1.3",
+    "@angular/platform-browser": "18.1.3",
+    "@angular/platform-browser-dynamic": "18.1.3"
   }
 }
