--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@my-angular-app/shared-ui": ["libs/shared/ui/src/index.ts"],
+      "@my-angular-app/shared/*": ["libs/shared/*"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
